# pwned_credential_checker

./: .gitignore  README.md  pyproject.toml
src/: app.py  pwned_credential_checker.py
