[project]
name = "pwned-credential-checker"
version = "0.1.0"
description = "A professional personal data breach checker using K-Anonymity and Supabase tracking."
authors = [
    {name = "Polymath Developer", email = "gohard-lab@github.com"}
]
dependencies = [
    "requests>=2.31.0",
    "streamlit>=1.35.0",
    "streamlit-javascript>=0.1.5",
    "supabase>=2.4.0",
]
requires-python = ">=3.9"
